Include swagger doc for cars
